cabal-version:      2.4
name:               haskell-webserver
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: testing out the haskell webserver

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             niko
maintainer:         nikodem.bienia@envelio.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell-webserver
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0,
        wai ^>=3.2.3,
        warp ^>=3.3.18,
        http-types ^>=0.12.3
    hs-source-dirs:   app
    default-language: Haskell2010
